<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/create"
        android:icon="@drawable/create_icon"
        android:title="@string/create"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/search"

        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>


    <item android:id="@+id/download"
        android:icon="@drawable/download_icon"
        android:title="@string/download"
        android:checked="false"
        app:showAsAction="ifRoom"
       />
</menu>